@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.mall.tv"
        name="Mall.TV"
-       version="0.0.12"
+       version="0.0.13"
        provider-name="koudi">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
